--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <link type="ico" rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="./src/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Go-Fast CDN</title>
+    <title>Lateur CDN</title>
   </head>
   <body class="min-w-full min-h-screen overflow-hidden">
     <div id="root" class="w-screen min-h-screen"></div>
